fix overlapping cols

--- a/client/styles/createOrder.less
+++ b/client/styles/createOrder.less
@@ -2,7 +2,7 @@
 
 .create-order {
 	height: 100%;
-	section {
+	.container {
 		height: @col-height;
 	}
 	section:first-child {
